[metadata]
name = optio
version = 0.0.0
author = Dmitry Zhukov
author_email = zhukovdm@proton.me
url = https://github.com/zhukovdm/optio
description = Python library for parsing command line arguments
long_description = file: docs/manual.md
long_description_content_type = text/markdown
keywords = argparse, argument parser, option parser, optparse
license_files = LICENSE.txt
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.8.0
packages = optio
