[metadata]
name = optio
version = 1.0.0
author = Dmitry Zhukov
author_email = zhukovdm@proton.me
url = https://github.com/zhukovdm/optio
description = Command-line argument parser
long_description = file: docs/manual.md
long_description_content_type = text/markdown
keywords = argparse, argument parser, option parser, optparse
license_files = LICENSE.txt
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.8.0
packages = optio
